fixNavbarIssue - I used the z-index property

--- a/Card/card.style.css
+++ b/Card/card.style.css
@@ -8,13 +8,15 @@
   object-fit: cover;
   flex-wrap: wrap;
   grid-auto-rows: 150px;
-  padding: 20px;
+  padding-top: 7%;
+  z-index: 0;
 }
 
 .gallery-item {
   position: flex;
   overflow: hidden;
   border-radius: 30px;
+  z-index: 0;
 }
 
 .gallery-item img {
@@ -24,6 +26,7 @@
   width: 80%;
   height: 100%;
   object-fit: cover;
+  z-index: 1;
 }
 
 .gallery-item:hover img {
