--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -13,13 +13,13 @@ header{
   width: 100%;
   background-color: #fff;
   box-shadow: -3px 8px 5px -8px rgba(0,0,0,0.2);
+  z-index: 1000;
 }
 .navbar {
   margin: auto;
   background-color: #fff;
   height: 80px;
   padding: 0 16px;
-
 }
 
 .navbar-container {
